--- a/html-work/2/structure.html
+++ b/html-work/2/structure.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/mystlye.css">
+    <link rel="stylesheet" href="css/mystlye.css" />
   </head>
   <body>
-    <div></div>
+    <div id="container">
+      <header>
+        <div id="logo">
+          <a href="http://www.naver.com">
+            <h1>네이버</h1>
+          </a>
+        </div>
+        <nav class="navi">
+          <ul>
+            <li><a href="#">단체여행</a></li>
+            <li><a href="#">개인여행</a></li>
+            <li><a href="#">갤러리</a></li>
+            <li><a href="#">문의하기</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <section>
+          <h1>몸과 마음이 치유되는 샘</h1>
+          <img src="image/a.png" alt="aa" height="200">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, nulla vero dignissimos adipisci maiores aut ad ullam alias incidunt. Incidunt, voluptate perspiciatis. Modi deserunt quis harum quod delectus commodi excepturi!</p>
+        </section>
+        <section>
+          <h1>다양한 액티비티가 기다리는 샘</h1>
+          <img src="image/b.png" alt="aa" height="200">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, nulla vero dignissimos adipisci maiores aut ad ullam alias incidunt. Incidunt, voluptate perspiciatis. Modi deserunt quis harum quod delectus commodi excepturi!</p>
+        </section>
+        <footer>
+          <ul>
+            <li><a href="#">회사 소개</a></li>
+            <li><a href="#">개인정보처리방침</a></li>
+            <li><a href="#">여행 약관</a></li>
+            <li><a href="#">사이트맵</a></li>
+          </ul>
+        </footer>
+      </main>
+    </div>
   </body>
 </html>
