--- a/html-work/1/ex01.html
+++ b/html-work/1/ex01.html
@@ -17,6 +17,9 @@
     <p>HTML</p>
     <p>CSS</p>
     <p>JAVASCRIPT</p>
+
+    <a href="../4/ex03.html">여기서 누르면 4번폴더에 ex03.html가기</a>
+    
 </body>
 
 </html>
